--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,25 @@
 /* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css?family=Open+Sans");
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+*:before, *:after {
+  box-sizing: inherit;
+}
+
+body {
+  background: #f2f2f2;
+  position: relative;
+  height: 100%;
+  min-height: 100vh;
+  width: 100%;
+  font-size: 100%;
+  line-height: 1.6;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  font-family: 'Open Sans', sans-serif;
+}
