--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -15,6 +15,7 @@
   text-align: center;
   font-size: 2rem;
   font-weight: 600;
+  margin-bottom: 1rem;
 }
 
 .form-container {
@@ -60,4 +61,9 @@
 .shorten-box {
   border: .3rem solid #00B4CC;
   border-radius: .2em;
+  padding: 2rem;
+}
+
+li {
+  list-style: none;
 }
